Fix regression in handling toggle mirror mode

Toggle mirror mode shouldn't be dependent on the dev-shortcuts flag.

BUG=650394
TEST=Ctrl+F4 should toggle mirror mode successfully.

Review-Url: https://codereview.chromium.org/2417773002
Cr-Commit-Position: refs/heads/master@{#425189}

Former-commit-id: d8b394e863e69c0b99338e826a05fae76f22851a